--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -79,16 +79,26 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
+       <widget class="QPushButton" name="btn_choose_folder">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Century&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Выбрать папку</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeType">
-         <enum>QSizePolicy::Minimum</enum>
+         <enum>QSizePolicy::Fixed</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>450</width>
+          <width>320</width>
           <height>20</height>
          </size>
         </property>
@@ -142,6 +152,16 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
+       <widget class="QPushButton" name="btn_crop">
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Century&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Разрезать</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_6">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -151,7 +171,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>600</width>
+          <width>500</width>
           <height>20</height>
          </size>
         </property>
@@ -202,7 +222,7 @@
          <x>0</x>
          <y>0</y>
          <width>1068</width>
-         <height>650</height>
+         <height>640</height>
         </rect>
        </property>
       </widget>
