--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -84,7 +84,7 @@
          <string notr="true">font: 12pt &quot;Century&quot;;</string>
         </property>
         <property name="text">
-         <string>Выбрать папку</string>
+         <string>Выбрать папку для разрезания</string>
         </property>
        </widget>
       </item>
@@ -98,7 +98,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>320</width>
+          <width>180</width>
           <height>20</height>
          </size>
         </property>
@@ -106,6 +106,15 @@
       </item>
       <item>
        <widget class="QLineEdit" name="lineEdit_x">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="whatsThis">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;5&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Century&quot;;</string>
+        </property>
         <property name="text">
          <string>5</string>
         </property>
@@ -129,8 +138,17 @@
       </item>
       <item>
        <widget class="QLineEdit" name="lineEdit_y">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="whatsThis">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">font: 12pt &quot;Century&quot;;</string>
+        </property>
         <property name="text">
-         <string>5</string>
+         <string> 5</string>
         </property>
        </widget>
       </item>
@@ -181,7 +199,7 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>500</width>
+          <width>430</width>
           <height>20</height>
          </size>
         </property>
@@ -193,7 +211,7 @@
          <string notr="true">font: 12pt &quot;Century&quot;;</string>
         </property>
         <property name="text">
-         <string>Подтвердить</string>
+         <string>Подтвердить количество</string>
         </property>
        </widget>
       </item>
@@ -245,97 +263,6 @@
          <height>648</height>
         </rect>
        </property>
-       <widget class="QFrame" name="frame">
-        <property name="geometry">
-         <rect>
-          <x>880</x>
-          <y>120</y>
-          <width>181</width>
-          <height>281</height>
-         </rect>
-        </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
-        </property>
-        <widget class="QTextEdit" name="textEdit">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>10</y>
-           <width>161</width>
-           <height>131</height>
-          </rect>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pushButton">
-         <property name="geometry">
-          <rect>
-           <x>100</x>
-           <y>250</y>
-           <width>75</width>
-           <height>23</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Ok</string>
-         </property>
-        </widget>
-        <widget class="QGroupBox" name="groupBox">
-         <property name="geometry">
-          <rect>
-           <x>10</x>
-           <y>150</y>
-           <width>161</width>
-           <height>91</height>
-          </rect>
-         </property>
-         <property name="title">
-          <string>Ответы</string>
-         </property>
-         <widget class="QRadioButton" name="radioButton">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>20</y>
-            <width>82</width>
-            <height>17</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>RadioButton</string>
-          </property>
-         </widget>
-         <widget class="QRadioButton" name="radioButton_2">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>40</y>
-            <width>82</width>
-            <height>17</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>RadioButton</string>
-          </property>
-         </widget>
-         <widget class="QRadioButton" name="radioButton_3">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>60</y>
-            <width>82</width>
-            <height>17</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>RadioButton</string>
-          </property>
-         </widget>
-        </widget>
-       </widget>
       </widget>
      </widget>
     </item>
